Services/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.zlaya.tech`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: oidc-auth
          namespace: bazarr
        - name: default-headers
          namespace: default
  tls:
    secretName: zlayatech-production-tls
